[package]
name = "xtpost"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "3.0.2"
eyre = "0.6.5"
once_cell = "1.7.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
