[package]
name = "xtpost"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
directories = "3.0.2"
eyre = "0.6.5"
once_cell = "1.7.2"
reqwest = { version = "0.11.3", features = ["blocking", "multipart"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[build-dependencies]
vergen = { version = "5.1.5", default-features = false, features = ["build", "git"] }
