[package]
name = "xtpost"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
bytes = "1.0.1"
directories = "3.0.2"
eyre = "0.6.5"
futures = "0.3.15"
once_cell = "1.7.2"
reqwest = { version = "0.11.3", features = ["multipart", "stream"] }
scraper = "0.12.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["fs", "rt"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
url = "2.2.2"

[build-dependencies]
vergen = { version = "5.1.5", default-features = false, features = ["build", "git"] }
